--- a/dmisc/inst/ChangeLog
+++ b/dmisc/inst/ChangeLog
@@ -1,4 +1,5 @@
 version 0.3:
+	* add `lincom' linear combinations utility funcs
 	* fix bug in disambiguate: 'fmt' arg was just ignored
 
 version 0.2: 22/06/2010
