add swapNamesAndContents manpage, fix typo in matrixTabular manpage

--- a/dmisc/inst/ChangeLog
+++ b/dmisc/inst/ChangeLog
@@ -1,4 +1,5 @@
 version 0.3:
+	* add `swapNamesAndContents' utility function
 	* add matrixAsTabular & friends utility functions
 	* add `collapse' wrapper to `sep'
 	* add `lincom' linear combinations utility funcs
