--- a/dmisc/inst/ChangeLog
+++ b/dmisc/inst/ChangeLog
@@ -1,3 +1,6 @@
+version 0.4:
+	* add 'beginsWith' and 'endsWith' string functions
+
 version 0.3: 12/07/2010
 	* add 'fancyContrasts' utility function
 	* add 'swapNamesAndContents' utility function
