--- a/dmisc/inst/ChangeLog
+++ b/dmisc/inst/ChangeLog
@@ -1,4 +1,5 @@
 version 0.4:
+	* improve 'fancyContrasts': 'base' argument can be a level name
 	* add 'beginsWith' and 'endsWith' string functions
 
 version 0.3: 12/07/2010
