--- a/dmisc/inst/ChangeLog
+++ b/dmisc/inst/ChangeLog
@@ -1,3 +1,6 @@
+version 0.5:
+	* improve 'lincom': now accepts weights of length 1
+
 version 0.4:
 	* improve 'fancyContrasts': 'base' argument can be a level name
 	* add 'beginsWith' and 'endsWith' string functions
